src/objects/IT_PDF_TemplateMdt__mdt.object
<CustomObject>
    <fields>
        <fullName>IT_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_HtmlForPdf__c</fullName>
        <label>HtmlForPdf</label>
        <length>130768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IT_Object_Name__c</fullName>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>IT_Welfare_Project__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PDF Template</label>
    <pluralLabel>PDF Templates</pluralLabel>
</CustomObject>